# analytics-rust

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: publish.yaml  push.yaml
examples/: etl.rs  etl_auto_batch.rs  low_level.rs  mid_level_with_helpers.rs  server.rs  simple.rs
src/: analytics.rs  auto_batcher.rs  batch.rs  batcher.rs  buffer.rs  client.rs  errors.rs  http.rs  lib.rs  ll_batch.rs  ll_client.rs  main.rs  message.rs  standard_client.rs
