[package]
authors = ["Dean Karn <dean@segment.com>","Ulysse Carion <ulysse@segment.com>"]
description = "Segment analytics client for Rust https://segment.com/docs/libraries/rust"
edition = "2018"
license = "MIT"
name = "analytics"
version = "0.2.1"
readme = "README.md"

[[bin]]
name = "analytics"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
failure = "0.1.5"
serde_json = "1.0.39"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.clap]
optional = true
version = "2.33"

[dependencies.reqwest]
features = ["blocking", "json"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1.0.93"

[features]
cli = ["clap"]
