[package]
authors = ["Sergio Prada <metal@getmetal.io>"]
description = "June analytics client for Rust"
edition = "2018"
license = "MIT"
name = "june-analytics"
version = "0.0.3"
readme = "README.md"

[[bin]]
name = "june-analytics"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
failure = "0.1.5"
serde_json = "1.0.39"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.clap]
optional = true
version = "2.33"

[dependencies.reqwest]
features = ["blocking", "json"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1.0.93"

[features]
cli = ["clap"]
