[package]
authors = ["Sergio Prada <metal@getmetal.io>"]
description = "June analytics client for Rust"
edition = "2018"
license = "MIT"
name = "june-analytics"
version = "0.2.0"
readme = "README.md"

[dependencies]
async-trait = "0.1.51"
time = { version = "0.3.7", features = ["serde-well-known", "formatting", "parsing"] }
reqwest = { version = "0.11.4", features = ["json"], default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"], default-features = false }

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
